[package]
name = "RusLE"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-result]
version = "0.2"
