[package]
name = "Rusle"
version = "0.1.1"
edition = "2021"
authors = ["L4Ph <4ranci0ne@gmail.com>"]
license-file = "LICENSE"
description = "Rust reimplementation version of ULE4JIS"
repository = "https://github.com/L4Ph/Rusle"

[dependencies]
crossterm = "0.27"
once_cell = "1.20.2"
pc-keyboard = "0.8.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-result]
version = "0.2"
